--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
+    "nodemailer": "^7.0.3",
     "nodmeon": "^0.0.1-security",
     "uuidv4": "^6.2.13"
   }
