--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "axios": "^1.6.7",
     "chart.js": "^4.4.8",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
